@@ -552,15 +552,13 @@ Checking some important permissions
 sub permissions {
 
     # pfcmd needs to be setuid / setgid and 
-    # TODO once #1087 is fixed, promote to fatal or remove need for setuid/setgid
     my (undef, undef, $pfcmd_mode, undef, $pfcmd_owner, $pfcmd_group) = stat($bin_dir . "/pfcmd");
     if (!($pfcmd_mode & S_ISUID && $pfcmd_mode & S_ISGID)) {
-        add_problem( $WARN, "pfcmd needs setuid and setgid bit set to run properly. Fix with chmod ug+s pfcmd" );
+        add_problem( $FATAL, "pfcmd needs setuid and setgid bit set to run properly. Fix with chmod ug+s pfcmd" );
     }
     # pfcmd needs to be owned by root (owner id 0 / group id 0) 
-    # TODO once #1087 is fixed, promote to fatal or remove need for setuid/setgid
     if ($pfcmd_owner || $pfcmd_group) {
-        add_problem( $WARN, "pfcmd needs to be owned by root. Fix with chown root:root pfcmd" );
+        add_problem( $FATAL, "pfcmd needs to be owned by root. Fix with chown root:root pfcmd" );
     }
 
     # TODO verify log files ownership (issue #1191)
