@@ -17,6 +17,7 @@ For a list of compatibility related changes see the UPGRADE file.
 Version <version> released on <releaseDate>
 
 Bug fixes
+ * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
  * Fixed configurator.pl does not show interfaces without IP address (#1221)
 
 --------------------------------------------------------------------------------
